# OS_FileSystem

./: --.cpp  .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
data/: CommandToInt.csv  commands.txt  dir.csv  file.csv  graph.csv  nodeInfo.csv  readme.md  tree.csv  userGroupData.csv  userdata.csv
doc/: commands.txt  desc.md  head.txt
src/: CMakeLists.txt  defaultClass.cpp  defaultSrc.cpp
src/Directory/: Directory.cpp  DirectorySystem.cpp
src/Disk/: Block.cpp  ChainInfo.cpp  Disk.cpp  DiskManager.cpp  Frame.cpp  Page.cpp  Partition.cpp  Sector.cpp
src/File/: File.cpp  FileAttribute.cpp  FileContext.cpp  FileFullName.cpp  FileManager.cpp  FileTree.cpp  FileType.cpp  Node.cpp  funcs.cpp
src/Manager/: FileTree.cpp  Node.cpp  funcs.cpp
src/Shell/: Shell.cpp  ShellFunctions.cpp  UserFunctions.cpp  getopt.cpp
src/User/: User.cpp  UserGroup.cpp  UserManager.cpp
src/include/: defaultClass.hpp  defaultHeader.hpp
src/include/Directory/: Directory.hpp  DirectorySystem.hpp
src/include/Disk/: Block.hpp  ChainInfo.hpp  Disk.hpp  DiskConfiguration.hpp  DiskDefs.hpp  DiskManager.hpp  Frame.hpp  Page.hpp  Partition.hpp  Sector.hpp
src/include/File/: File.hpp  FileAttribute.hpp  FileContext.hpp  FileFullName.hpp  FileManager.hpp  FilePermission.hpp  FileTree.h  FileType.hpp  Identity.h  Node.h
src/include/Manager/: FileTree.h  Identity.h  Node.h  funcs.hpp
src/include/Shell/: Shell.hpp  ShellFunctions.hpp  UserFunctions.hpp
src/include/User/: Character.hpp  User.hpp  UserGroup.hpp  UserManager.hpp
test/: CMakeLists.txt  defaultClass.cpp  main.cpp  test.cpp
test/data/: testdata.cpp
test/utils/: test224.cpp
utils/: CMakeLists.txt  utils.cpp  utils.hpp
